[package]
name = "cpucat"
version = "0.1.8"
edition = "2021"
authors = ["Daniil Bubnov <bubnov.d.e@gmail.com>", "Philip Samoylov <samoylovfp@gmail.com>"]
default-run = "cpucat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.3"
sysinfo = "0.27.1"
anyhow = "1.0.68"
