[package]
name = "cpucat"
version = "0.1.8"
edition = "2021"
authors = ["Daniil Bubnov <bubnov.d.e@gmail.com>", "Phil Samoylov <samoylovfp@gmail.com>"]
default-run = "cpucat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.4.1"
sysinfo = "0.33.1"
anyhow = "1.0.97"
